# CrazyOnes

./: .env.example  .gitignore  BOT_STANDALONE.md  CHANGELOG.md  COMO_USAR_BOT.md  DEMO.md  DOCKER.md  DOCKER_HUB.md  Dockerfile  LICENSE  MANUAL_EXECUTION.md  QUICKSTART.md  README.md  RESUMEN_BOT.md  SUMMARY.md  VERIFICACION.md  compose.yml  config.json  crazyones-bot.py  crazyones.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run-bot-example.sh  scrape_and_save_html.py  scrape_apple_updates.py  scrape_hreflang.py  setup.sh  test-bot.py  test_actual_html.py  test_scraper.py
data/: language_names.json  subscriptions.json
examples/: README.md  demonstrate_url_hashing.py  filter_updates_by_date.py
html/: ar-ae.html  ar-bh.html  ar-eg.html  ar-jo.html  ar-kw.html  ar-om.html  ar-qa.html  ar-sa.html  cs-cz.html  da-dk.html  de-at.html  de-ch.html  de-de.html  de-li.html  de-lu.html  el-cy.html  el-gr.html  en-ae.html  en-al.html  en-am.html  en-az.html  en-bh.html  en-bn.html  en-bw.html  en-by.html  en-ca.html  en-eg.html  en-ge.html  en-gu.html  en-gw.html  en-hk.html  en-il.html  en-is.html  en-jo.html  en-ke.html  en-kg.html  en-kw.html  en-kz.html  en-lb.html  en-lk.html  (+67 more)
json/: ar-ae.json  ar-bh.json  ar-eg.json  ar-jo.json  ar-kw.json  ar-om.json  ar-qa.json  ar-sa.json  cs-cz.json  da-dk.json  de-at.json  de-ch.json  de-de.json  de-li.json  de-lu.json  el-cy.json  el-gr.json  en-ae.json  en-al.json  en-am.json  en-az.json  en-bh.json  en-bn.json  en-bw.json  en-by.json  en-ca.json  en-eg.json  en-ge.json  en-gu.json  en-gw.json  en-hk.json  (+75 more)
(+131 files in other folders)
